@@ -27,7 +27,6 @@
  */
 package org.hisp.dhis.appmanager;
 
-import static com.google.common.base.Preconditions.checkNotNull;
 import static org.jclouds.blobstore.options.ListContainerOptions.Builder.prefix;
 
 import com.fasterxml.jackson.core.JsonParseException;
@@ -38,12 +37,12 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.URI;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Properties;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Consumer;
 import java.util.regex.Pattern;
 import java.util.zip.ZipEntry;
@@ -51,6 +50,7 @@ import java.util.zip.ZipException;
 import java.util.zip.ZipFile;
 import javax.annotation.PostConstruct;
 import javax.annotation.PreDestroy;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.tuple.Pair;
 import org.hisp.dhis.cache.Cache;
@@ -87,6 +87,7 @@ import org.springframework.stereotype.Service;
  * @author Stian Sandvold
  */
 @Slf4j
+@RequiredArgsConstructor
 @Service("org.hisp.dhis.appmanager.JCloudsAppStorageService")
 public class JCloudsAppStorageService implements AppStorageService {
   private static final Pattern CONTAINER_NAME_PATTERN =
@@ -95,7 +96,7 @@ public class JCloudsAppStorageService implements AppStorageService {
   private static final long FIVE_MINUTES_IN_SECONDS =
       Minutes.minutes(5).toStandardDuration().getStandardSeconds();
 
-  private Map<String, App> reservedNamespaces = new HashMap<>();
+  private final Map<String, App> reservedNamespaces = new ConcurrentHashMap<>();
 
   private BlobStore blobStore;
 
@@ -114,7 +115,7 @@ public class JCloudsAppStorageService implements AppStorageService {
   private static final String JCLOUDS_PROVIDER_KEY_TRANSIENT = "transient";
 
   private static final List<String> SUPPORTED_PROVIDERS =
-      Arrays.asList(
+      List.of(
           JCLOUDS_PROVIDER_KEY_FILESYSTEM,
           JCLOUDS_PROVIDER_KEY_AWS_S3,
           JCLOUDS_PROVIDER_KEY_TRANSIENT);
@@ -128,19 +129,6 @@ public class JCloudsAppStorageService implements AppStorageService {
   private final DhisConfigurationProvider configurationProvider;
 
   private final ObjectMapper jsonMapper;
-
-  public JCloudsAppStorageService(
-      LocationManager locationManager,
-      DhisConfigurationProvider configurationProvider,
-      ObjectMapper jsonMapper) {
-    checkNotNull(locationManager);
-    checkNotNull(configurationProvider);
-    checkNotNull(jsonMapper);
-
-    this.locationManager = locationManager;
-    this.configurationProvider = configurationProvider;
-    this.jsonMapper = jsonMapper;
-  }
 
   @PostConstruct
   public void init() {
@@ -284,13 +272,15 @@ public class JCloudsAppStorageService implements AppStorageService {
 
     // -----------------------------------------------------------------
     // Check for namespace and if it's already taken by another app
+    // Allow install if namespace was taken by another version of this app
     // -----------------------------------------------------------------
 
     String namespace = app.getActivities().getDhis().getNamespace();
 
     if (namespace != null
         && !namespace.isEmpty()
-        && app.equals(reservedNamespaces.get(namespace))) {
+        && reservedNamespaces.containsKey(namespace)
+        && !app.getKey().equals(reservedNamespaces.get(namespace).getKey())) {
       log.error(
           String.format(
               "Failed to install app '%s': Namespace '%s' already taken.",
@@ -362,8 +352,6 @@ public class JCloudsAppStorageService implements AppStorageService {
         return app;
       }
 
-      String namespace = app.getActivities().getDhis().getNamespace();
-
       // -----------------------------------------------------------------
       // Unzip the app
       // -----------------------------------------------------------------
@@ -396,6 +384,21 @@ public class JCloudsAppStorageService implements AppStorageService {
                     }
                   });
 
+      // make sure only one version of an app is installed
+      // so if we successfully install this version the old version is removed
+      Optional<App> existingApp = appCache.getIfPresent(app.getKey());
+      if (existingApp.isPresent()) {
+        App before = existingApp.get();
+        if (before.getAppStorageSource() == AppStorageSource.JCLOUDS) {
+          deleteApp(before);
+        }
+      }
+
+      String namespace = app.getActivities().getDhis().getNamespace();
+      if (namespace != null && !namespace.isEmpty()) {
+        reservedNamespaces.put(namespace, app);
+      }
+
       log.info(
           String.format(
               ""
@@ -411,6 +414,7 @@ public class JCloudsAppStorageService implements AppStorageService {
       // -----------------------------------------------------------------
 
       app.setAppState(AppStatus.OK);
+
       return app;
     } catch (ZipException e) {
       log.error("Failed to install app: Invalid ZIP format", e);
@@ -438,7 +442,10 @@ public class JCloudsAppStorageService implements AppStorageService {
       blobStore.removeBlob(config.container, resource.getName());
     }
 
-    reservedNamespaces.remove(app.getActivities().getDhis().getNamespace(), app);
+    String namespace = app.getActivities().getDhis().getNamespace();
+    if (namespace != null) {
+      reservedNamespaces.remove(namespace, app);
+    }
 
     log.info("Deleted app " + app.getName());
   }
